# crispy-mouse

./: LLM_SETUP.md  MANIFEST.in  Makefile  README.md  config.json  crispy_calibrate.py  crispy_config.json  crispy_hub.py  crispy_hub_gui.py  crispy_hub_v3.py  crispy_keyboard.py  crispy_llm.py  crispy_model_manager.py  deploy.sh  platformio.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup_local.bat
.devcontainer/: devcontainer.json
.github/workflows/: build-release.yml
src/: main.cpp
src/crispy_mouse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
