[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crispy-mouse"
version = "1.0.0"
authors = [
  { name = "JuniorCloud LLC", email = "dev@juniorcloud.io" },
]
description = "Sovereign Assistive HID Manifold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.1",
    "flake8>=6.1.0",
]
