[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crispy-mouse"
version = "1.0.0"
authors = [
  { name = "JuniorCloud LLC", email = "dev@juniorcloud.io" },
]
description = "Sovereign Assistive HID Manifold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "pyautogui>=0.9.53",
    "screeninfo>=0.8.1",
    "tobii-research>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "isort>=5.13.0",
    "sphinx>=7.2.6",
]
